--- a/public/index.html
+++ b/public/index.html
@@ -4,20 +4,20 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-		<link rel="stylesheet" type="text/css" href="./bower_components/bootstrap/dist/css/bootstrap.min.css" />
-		<link rel="stylesheet" type="text/css" href="./themes/css/styles.css" />
-		<title>Document</title>
+		<link rel="stylesheet" href="./bower_components/bootstrap/dist/css/bootstrap.min.css" />
+		<link rel="stylesheet" href="./bower_components/MDBootstrap/css/mdb.min.css" />
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+		<title>News App</title>
 	</head>
 	<body>
 		<ng-view></ng-view>
-		<script type="text/javascript" src="./bower_components/jquery/dist/jquery.min.js"></script>
-		<script type="text/javascript" src="./bower_components/popper.js/dist/umd/popper.min.js"></script>
-		<script type="text/javascript" src="./bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
-		
-		<script type="text/javascript" src="./bower_components/angular/angular.js"></script>
-		<script type="text/javascript" src="./bower_components/angular-route/angular-route.js"></script>
-	
-		<script type="text/javascript" src="./controllers/app.js"></script>
-		<script type="text/javascript" src ="./controllers/controller.js"></script>
+		<script src="./bower_components/jquery/dist/jquery.min.js"></script>
+		<script src="./bower_components/popper.js/dist/umd/popper.min.js"></script>
+		<script src="./bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+		<script src="./bower_components/MDBootstrap/js/mdb.min.js"></script>
+		<script src="./bower_components/angular/angular.js"></script>
+		<script src="./bower_components/angular-route/angular-route.js"></script>
+		<script src="./controllers/app.js"></script>
+		<script src ="./controllers/controller.js"></script>
 	</body>
 </html>
